# digit-recognition

./: .gitignore  .gitmodules  App.hpp  Button.cpp  Button.hpp  Button.tpp  CMakeLists.txt  Observer.tpp  PaintArea.cpp  PaintArea.hpp  README.md  Resources.cpp  Resources.hpp  SFML_test.cbp  SFML_test.depend  SFML_test.layout  Subject.tpp  TextArea.cpp  TextArea.hpp  Widget.cpp  Widget.hpp  backprop.html  bibliografie.html  buton.html  explicatie.html  imbunatatiri.html  index.html  interfata.html  introducere.html  main.cpp  mnist.html  paintarea.html  print.html  retele.html  searchindex.js  searchindex.json  sfml.html  trainedFinal2.txt  widget.html
include/: App.hpp  Button.hpp  PaintArea.hpp  Resources.hpp  TextArea.hpp  Widget.hpp
src/: Button.cpp  PaintArea.cpp  Resources.cpp  TextArea.cpp  Widget.cpp  main.cpp
